# fsplit

./: .gitignore  CMakeLists.txt  README.md
msvc2008/: fsplit.sln  fsplit.vcproj
msvc2010/: fsplit.sln  fsplit.vcxproj  fsplit.vcxproj.filters
qtcreator/: fsplit.pri  fsplit.pro
qtcreator/test/: main.c  test.pro
src/: CMakeLists.txt  cmd_args.c  cmd_args.h  cycle_buffer.c  cycle_buffer.h  dfa_search.c  dfa_search.h  dyn_lib.h  export.h  file_mapping.c  file_mapping.cpp  file_mapping.h  file_op.h  file_stream.c  file_stream.h  main.c  main.cpp  name_gen.h  shift_buffer.c  shift_buffer.h  size_types.h  testing.h
